[package]
name = "bache"
authors = ["Ted Zilist <tzilist@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A WIP Bazel remote cache"
readme = "README.md"

[lib]
name = "bache"
path = "src/lib.rs"

[[bin]]
name = "bache"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "3.1", features = ["derive", "env"] }
color-eyre = "0.6"
dotenv = "0.15"
enum_dispatch = "0.3"
eyre = "0.6"
futures = "0.3"
hex = "0.4"
once_cell = "1"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-otlp = "0.10"
moka = { version = "0.8", features = ["future"] }
prost = "0.10"
prost-types = "0.10"
stable-eyre = "0.2"
thiserror = "1"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.7", features = ["compression", "transport", "tls", "tls-roots"] }
tonic-health = "0.6"
tonic-reflection = "0.4"
uuid = "1"
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
eyre = "0.6"
glob = "0.3"
tonic-build = { version = "0.7", features = ["compression"] }
